@@ -31,7 +31,7 @@
 
 typedef struct _ThemeCallbackData
 {
-  GFunc func;
+  ThemeChangedCallback func;
   gpointer data;
 } ThemeCallbackData;
 
@@ -375,23 +375,15 @@ handle_change_signal (GnomeThemeType       type,
   gchar *type_str = NULL;
   gchar *element_str = NULL;
 #endif
-  gchar *uri = NULL;
   GList *list;
 
   if (initting)
     return;
 
-  if (type == GNOME_THEME_TYPE_REGULAR)
-    uri = ((GnomeThemeInfo *)theme)->path;
-  else if (type == GNOME_THEME_TYPE_METATHEME)
-    uri = ((GnomeThemeMetaInfo *)theme)->path;
-  else if (type == GNOME_THEME_TYPE_ICON)
-    uri = ((GnomeThemeIconInfo *)theme)->path;
-  
   for (list = callbacks; list; list = list->next)
   {
     ThemeCallbackData *callback_data = list->data;
-    (* callback_data->func) (uri, callback_data->data);
+    (* callback_data->func) (type, theme, change_type, element, callback_data->data);
   }
 
 #ifdef DEBUG
@@ -1279,7 +1271,6 @@ gnome_theme_info_find_by_uri (const gchar *theme_uri)
   return g_hash_table_lookup (theme_hash_by_uri, theme_uri);
 }
 
-
 /* Icon themes */
 GnomeThemeIconInfo *
 gnome_theme_icon_info_new (void)
@@ -1471,8 +1462,50 @@ gnome_theme_meta_info_compare (GnomeThemeMetaInfo *a,
   return safe_strcmp (a->background_image, b->background_image);
 }
 
+gboolean
+gnome_theme_is_writable (gpointer theme, GnomeThemeType type) {
+  GnomeVFSResult vfs_result;
+  GnomeVFSFileInfo *vfs_info;
+  const gchar *theme_path;
+  gboolean writable;
+
+  if (theme == NULL)
+    return FALSE;
+
+  switch (type) {
+    case GNOME_THEME_TYPE_REGULAR:
+      theme_path = ((GnomeThemeInfo *) theme)->path;
+      break;
+    case GNOME_THEME_TYPE_ICON:
+      theme_path = ((GnomeThemeIconInfo *) theme)->path;
+      break;
+    case GNOME_THEME_TYPE_METATHEME:
+      theme_path = ((GnomeThemeMetaInfo *) theme)->path;
+      break;
+    default:
+      g_assert_not_reached ();
+      break;
+  }
+
+  if (theme_path == NULL)
+    return FALSE;
+		
+  vfs_info = gnome_vfs_file_info_new ();
+  vfs_result = gnome_vfs_get_file_info (theme_path,
+					vfs_info,
+					GNOME_VFS_FILE_INFO_GET_ACCESS_RIGHTS);
+  
+  writable = ((vfs_result == GNOME_VFS_OK) &&
+              (vfs_info->valid_fields & GNOME_VFS_FILE_INFO_FIELDS_ACCESS) &&
+              (vfs_info->permissions & GNOME_VFS_PERM_ACCESS_WRITABLE)); 
+
+  gnome_vfs_file_info_unref (vfs_info);
+
+  return writable;
+}
+
 void
-gnome_theme_info_register_theme_change (GFunc    func,
+gnome_theme_info_register_theme_change (ThemeChangedCallback func,
 					gpointer data)
 {
   ThemeCallbackData *callback_data;
