@@ -1,3 +1,13 @@
+2007-06-07  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-theme-info.c: (handle_change_signal),
+	(gnome_theme_is_writable),
+	(gnome_theme_info_register_theme_change):
+	* gnome-theme-info.h:
+	modify the theme change callback to return more useful
+	information and add a function to determine whether a given
+	theme is writable
+
 2007-06-06  Jens Granseuer  <jensgr@gmx.net>
 
 	* Bonobo_Control_Capplet_generic.oaf.in:
